# class-critic-spider

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs  types.rs
