[package]
name = "class-critic-spider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.13", features = ["json"]}
serde = { version = "1", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio", "macros"]}
serde_json = "1"
dotenvy = "0.15"


